app/globals.css
@import "tailwindcss";

@theme {
  --color-primary-blue-50: #a9d6e5ff;
  --color-primary-blue-100: #89c2d9ff;
  --color-primary-blue-200: #61a5c2ff;
  --color-primary-blue-300: #468fafff;
  --color-primary-blue-400: #2c7da0ff;
  --color-primary-blue-500: #2a6f97ff;
  --color-primary-blue-600: #014f86ff;
  --color-primary-blue-700: #01497cff;
  --color-primary-blue-800: #013a63ff;
  --color-primary-blue-900: #012a4aff;

  --color-primary-purple-50: #faf5ff;
  --color-primary-purple-100: #f3e8ff;
  --color-primary-purple-200: #e9d5ff;
  --color-primary-purple-300: #d8b4fe;
  --color-primary-purple-400: #c084fc;
  --color-primary-purple-500: #a855f7;
  --color-primary-purple-600: #9333ea;
  --color-primary-purple-700: #7c3aed;
  --color-primary-purple-800: #6b21a8;
  --color-primary-purple-900: #581c87;

}

html {
  scroll-behavior: smooth;
  background-color: var(--color-primary-blue-400);
  /* font-family: var(--font-jet-brains-mono); */
  font-family: var(--font-ibm-plex-mono);
}

body {
  /* background-color: var(--color-primary-blue-400); */
  /* color: var(--color-primary-blue-100); */
  padding: calc(var(--spacing) * 0);
  margin: calc(var(--spacing) * 0);
  display: block;
  overflow-x: hidden;
  
  transition-duration: 300ms;
}

.large-caret {
  position: absolute;
  bottom: 5rem;
  left: 50%;

  display: inline-block; 

  width: 12rem;
  height: 12rem;
  cursor: pointer;

  transform: translateX(-50%);
  transform-origin: center;
  will-change: transform;

  animation: grow-in-centered 1s ease both;
  animation-timeline: view();
  /* animation-range: 50% 0%; */

  animation-range: 0% 50%;
  animation-direction: reverse;
}

.large-caret::after {
  content: 'v';
  font-size: 12rem;
  display: flex;
  /* display: block; */
  will-change: transform;

  position: absolute;
  pointer-events: none;
  cursor: not-allowed;

  top: 50%;
  left: 50%;
  animation: gentle-bounce 5s infinite;
  transform: translate(-50%, -50%);
  transform-origin: center;
}

@media (width < 40rem /* 640px */) {
  .large-caret::after {
    font-size: 5rem;
  }
  .large-caret {
    bottom: 0.5rem;
  }
}

.grow-in {
  animation: grow-in 1s forwards;
}

.scroll-dramatic-grow-in {
  animation: dramatic-grow-in ease both;
  animation-timeline: view();
  animation-range: 0% 100%;
}

@keyframes gentle-bounce {
  0%, 100% {
    transform: translate(-50%, -50%) translateY(-4.5rem);
  }
  50% {
    transform: translate(-50%, -50%) translateY(-2.5rem);
  }
}

@keyframes grow-in {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}

@keyframes dramatic-grow-in {
  0%, 100% {
    transform: scale(0.7);
    opacity: 0.7;
  }
  40%, 60% {
    transform: scale(1);
    opacity: 1.0;
  }
}

@keyframes grow-in-centered {
  0% {
    transform: translateX(-50%) scale(0);
  }
  100% {
    transform: translateX(-50%) scale(1);
  }
}

